<resources>
    <string name="app_name">NeWork</string>
    <string name="title_posts">Posts</string>
    <string name="title_users">User</string>
    <string name="title_events">Event</string>
    <string name="title_profile">Profile</string>
    <string name="description_post_author_avatar">Avatar</string>
    <string name="description_post_attachment">Attachment</string>
    <string name="description_background_video" />
    <string name="description_play" />
    <string name="description_share" />
    <string name="description_view" />
    <string name="empty_posts" />
    <string name="post_menu_edit">Edit</string>
    <string name="post_menu_remove">Remove</string>
    <string name="retry">Retry</string>
    <string name="error_auth">You are not authorized</string>
    <string name="no_likers">No likes Owners</string>
    <string name="no_mentions">No Mentions</string>
    <string name="no_play">No play</string>
    <string name="error_loading">Loading problem! Please check network connection.</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="sign_out">sign_out</string>
    <string name="google_play_unavailable">Google api unavailable</string>
    <string name="description_splash" />
    <string name="empty_events">There are no events.\\nIf you create a new event, it will appear here</string>
    <string name="description_event_author_avatar" />
    <string name="description_event_attachment" />
    <string name="text_event_date">Event date:</string>
    <string name="no_speakers">No Speakers</string>
    <string name="no_participants">No Participants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="avatar_user">Avatar User</string>
    <string name="sign_user_name">User Name</string>
    <string name="sign_in_name">" Authorization"</string>
    <string name="sign_password">Password</string>
    <string name="create_account">Create account</string>
    <string name="error_login">Wrong Login or Password</string>
    <string name="sign_up_name">" Registration"</string>
    <string name="sign_repeat_password">Repeat Password</string>
    <string name="error_field_required">Fields must be filled</string>
    <string name="error_password">" Password mismatch"</string>
    <string name="sign_login">Login</string>
    <string name="title_jobs">Jobs</string>
    <string name="description_fab_add" />
    <string name="title_post">Post</string>
    <string name="title_event">Event</string>
    <string name="title_job">Job</string>
    <string name="text_job_name">Company :</string>
    <string name="text_job_position">Position :</string>
    <string name="text_job_start">From : (YYYY-MM-DD)</string>
    <string name="text_job_finish">To : (YYYY-MM-DD)</string>
    <string name="text_job_link">Site :</string>
    <string name="text_job_now">now</string>
    <string name="empty_jobs">There are no jobs. If you create a new job, it will appear here</string>
    <string name="text_new_post">New post text</string>
    <string name="description_photo" />
    <string name="clear">Clear</string>
    <string name="description_take_photo" />
    <string name="description_pick_photo" />
    <string name="save">Save</string>
    <string name="error_empty_content">Content is empty</string>
    <string name="description_image_full_screen" />
    <string name="text_new_event">New event text</string>
    <string name="text_new_event_date">Date :</string>
    <string name="text_new_event_time">Time :</string>
    <string name="add_speakers">Speakers +</string>
    <string name="search_here">Search Here</string>
    <string name="text_job_start_card">From:</string>
    <string name="text_job_finish_card">To :</string>
    <string name="set_point_button">Set point</string>
    <string name="location_button">Location</string>
    <string name="no_location">No access to location</string>
    <string name="title_map">Map</string>
    <string name="post">Post</string>
    <string name="fragment_events">Event</string>
    <string name="fragment_user">Users</string>
    <string name="fragment_sign_in">Authorization</string>
    <string name="fragment_sign_up">Registration</string>
    <string name="fragment_jobs">Job</string>
    <string name="fragment_wall">Wall</string>
    <string name="fragment_new_post">New post</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_new_event" />
    <string name="newjobfragment">New Job</string>
    <string name="mapfragment">Map</string>
    <string name="add">Add point</string>
    <string name="error_coordnate">location not specified</string>

</resources>