<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_user_avatar_fragment_profile"
                android:layout_width="@dimen/sign_avatar_size"
                android:layout_height="@dimen/sign_avatar_size"
                android:layout_margin="@dimen/common_spacing_large"
                android:src="@drawable/ic_default_user_profile_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_user_name_fragment_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing_large"
                android:text="@string/sign_user_name"
                android:textSize="@dimen/profile_user_name_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image_view_user_avatar_fragment_profile"
                app:layout_constraintStart_toEndOf="@id/image_view_user_avatar_fragment_profile"
                app:layout_constraintTop_toTopOf="@id/image_view_user_avatar_fragment_profile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_fragment_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_posts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_events" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_jobs" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_fragment_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linear_add_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="@color/purple_200"
                android:textSize="14sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="@dimen/common_spacing_large"
                android:clickable="true"
                android:gravity="center"
                android:tint="@color/purple_500"
                app:backgroundTint="@color/purple_100"
                app:fabSize="mini"
                app:rippleColor="@color/purple_200"
                app:srcCompat="@drawable/baseline_local_post_office_24" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_add_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_event"
                android:textColor="@color/purple_200"
                android:textSize="14sp" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="@dimen/common_spacing_large"
                android:clickable="true"
                android:gravity="center"
                android:tint="@color/purple_500"
                app:backgroundTint="@color/purple_100"
                app:fabSize="mini"
                app:rippleColor="@color/purple_200"
                app:srcCompat="@drawable/fub_event_24" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_add_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_job"
                android:textColor="@color/purple_200"
                android:textSize="14sp" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="@dimen/common_spacing_large"
                android:clickable="true"
                android:tint="@color/purple_500"
                app:backgroundTint="@color/purple_100"
                app:fabSize="mini"
                app:rippleColor="@color/purple_200"
                app:srcCompat="@drawable/ic_outline_front_hand_24" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/common_spacing_large"
            android:clickable="true"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/purple_200"
            app:fabSize="normal" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>